解析JwtToken中的内容

--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,12 @@
             <groupId>org.springframework.cloud</groupId>
             <artifactId>spring-cloud-starter-security</artifactId>
         </dependency>
+        <!--jjwt依赖 解析token的-->
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt</artifactId>
+            <version>0.9.1</version>
+        </dependency>
         <!--web组件-->
         <dependency>
             <groupId>org.springframework.boot</groupId>
